[package]
name = "hurban_selector"
version = "0.1.0"
edition = "2018"

authors = [
    "Ondrej Slinták <ondrowan@gmail.com>",
    "Ján Tóth <yanchi.toth@gmail.com>",
    "Ján Pernecký <info@sub.digital>",
]
license = "GPL-3.0-only"

[features]
default = []
dist = ["log/release_max_level_info"]

[dependencies]
approx = "0.3.2"
arrayvec = "0.5.1"
bitflags = "1.2.1"
chrono = "0.4.11"
crc32fast = "1.2.0"
crossbeam-channel = "0.4.2"
dirs = "2.0.2"
fern = { version = "0.6.0", features = ["colored"] }
futures = "0.3.5"
fxhash = "0.2.1"
image = "0.23.4"
imgui = "0.3.0"
log = "0.4.8"
nalgebra = { version = "0.21.0", features = ["serde-serialize"] }
noise = "0.6.0"
num-traits = "0.2.11"
png = "0.16.3"
raw-window-handle = "0.3.3"
ron = "0.6.0"
serde = { version = "1.0.110", features = ["derive"] }
smallvec = "1.4.0"
static_assertions = "1.1.0"
tinyfiledialogs = "3.3.9"
tobj = { version = "2.0.0", features = ["log"] }
wgpu = { version = "0.5.0", features = ["vulkan"] }

# The current newest version of winit (v0.22.2) has a problem if something (in
# our case the file dialog) lets the Windows VM_PAINT messages accumulate in the
# queue. The following assert fails in
# winit/src/platform_impl/windows/event_loop.rs:1942
#
# assert!(flush_paint_messages(
#     None,
#     &subclass_input.event_loop_runner
# ));
#
# ... presumably because while the file dialog was open, more VM_PAINT messages
# were accumulated.
# winit = "0.22.0"
winit = { git = "https://github.com/Osspial/winit", branch = "fix-reentrant-thread-target-repaint" }
zerocopy = "0.3.0"

[dev-dependencies]
insta = "0.16.0"
mockall = "0.7.1"

[build-dependencies]
shaderc = "0.6.2"
