[package]
name = "hurban_selector"
version = "0.1.0"
edition = "2018"

authors = [
    "Ondrej Slinták <ondrowan@gmail.com>",
    "Ján Tóth <yanchi.toth@gmail.com>",
    "Ján Pernecký <info@sub.digital>",
]
license = "GPL-3.0-only"

[features]
default = []
# FIXME: @Cleanup Negate the "dist" feature and call it "debug", making the
# build without extra debugging facilities the default. With the sole exception
# of logging (where a impl is picked based on the "dist" feature being present),
# everywhere else the code has more functionality with the "dist" feature
# absent. Flipping the feature will make it more additive.
dist = ["log/release_max_level_info"]

[dependencies]
approx = "0.3.2"
arrayvec = "0.5.1"
bitflags = "1.2.1"
chrono = "0.4.15"
clap = "3.0.0-beta.1"
crc32fast = "1.2.0"
crossbeam-channel = "0.4.3"
dirs = "3.0.1"
fern = { version = "0.6.0", features = ["colored"] }
futures = "0.3.5"
fxhash = "0.2.1"
image = "0.23.9"
imgui = "0.4.0"
log = "0.4.11"
nalgebra = { version = "0.22.0", features = ["serde-serialize"] }
noise = "0.6.0"
num-traits = "0.2.12"
png = "0.16.7"
raw-window-handle = "0.3.3"
ron = "0.6.1"
serde = { version = "1.0.115", features = ["derive"] }
smallvec = "1.4.2"
static_assertions = "1.1.0"
tinyfiledialogs = "3.3.10"
tobj = { version = "2.0.2", features = ["log"] }
wgpu = "0.6.0"

# The current newest version of winit (v0.22.2) has a problem if something (in
# our case the file dialog) lets the Windows VM_PAINT messages accumulate in the
# queue. The following assert fails in
# winit/src/platform_impl/windows/event_loop.rs:1942
#
# assert!(flush_paint_messages(
#     None,
#     &subclass_input.event_loop_runner
# ));
#
# ... presumably because while the file dialog was open, more VM_PAINT messages
# were accumulated.
winit = "0.22.0"
zerocopy = "0.3.0"

[dev-dependencies]
insta = "0.16.1"
mockall = "0.8.0"

[build-dependencies]
shaderc = "0.6.2"
