[package]
name = "hurban_selector"
version = "0.1.0"
edition = "2018"

authors = [
    "Ondrej Slinták <ondrowan@gmail.com>",
    "Ján Tóth <yanchi.toth@gmail.com>",
    "Ján Pernecký <info@sub.digital>",
]
license = "GPL-3.0-only"

[features]
default = []
# FIXME: @Cleanup Negate the "dist" feature and call it "debug", making the
# build without extra debugging facilities the default. With the sole exception
# of logging (where a impl is picked based on the "dist" feature being present),
# everywhere else the code has more functionality with the "dist" feature
# absent. Flipping the feature will make it more additive.
dist = ["log/release_max_level_info"]

[dependencies]
approx = "0.4.0"
arrayvec = "0.5.2"
bitflags = "1.2.1"
chrono = "0.4.19"
clap = "3.0.0-beta.2"
crc32fast = "1.2.1"
crossbeam-channel = "0.5.0"
dirs = "3.0.1"
fern = { version = "0.6.0", features = ["colored"] }
futures = "0.3.12"
fxhash = "0.2.1"
image = "0.23.12"
imgui = "0.6.1"
log = "0.4.13"
nalgebra = { version = "0.24.0", features = ["serde-serialize"] }
noise = "0.7.0"
num-traits = "0.2.14"
png = "0.16.8"
raw-window-handle = "0.3.3"
ron = "0.6.4"
serde = { version = "1.0.120", features = ["derive"] }
smallvec = "1.6.1"
static_assertions = "1.1.0"
tinyfiledialogs = "3.3.10"
tobj = { version = "2.0.3", features = ["log"] }
wgpu = "0.6.2"
winit = "0.24.0"
zerocopy = "0.3.0"

[dev-dependencies]
insta = "1.5.2"
mockall = "0.9.0"

[build-dependencies]
shaderc = "0.7.0"
